# sdg-energy-boardgame

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
docs/: architecture.md
resource/drone-pattern/: 1-ablic.txt  2-wind.txt  3-solar.txt  4-piezo.txt  5-coil.txt  6-heart.txt  7-clear.txt  8-congrat.txt  8-end.txt  9-love.txt
resource/firework-scripts/: coil.json  piezo.json  solar.json  success.json  wind.json
resource/firework-scripts/secret/: schneider.json
resource/firework-settings/: custom.json  hybrid.json  kinetic.json  konami.json  love_heart.json  super_overload.json
scripts/: generate_firework_sounds.py
src/pi/: __init__.py  config.py  main.py
src/pi/hardware/: pwm_out.py  receiver_ble.py  receiver_mock.py  receiver_wire.py  signal_scan.py
src/pi/logic/: game_state.py  models.py  smooth_fill.py
src/pi/ui/: cli_render.py
src/pi/ui/fireworks/: audio.py  behaviors.py  config.py  drones.py  engine.py  firework.py  gauges.py  gui.py  lighting.py  models.py  palette.py  particles.py  physics.py  renderer.py  scripting.py  strategies.py  ultimate_forge.py
src/test/: pyxel_hanabi.py
tests/: test_personal_best.py
